# quick-pull

./: .gitignore  Cargo.toml  README.md  config.example.toml
examples/: simple_download.rs
src/: args.rs  config.rs  daemon.rs  downloader.rs  ipc.rs  lib.rs  main.rs  observer.rs  state.rs  utils.rs  worker.rs
tests/: integration_test.rs
