[package]
name = "rfetch"
version = "0.1.0"
edition = "2024"
description = "A robust, concurrent file downloader designed to be resilient, supporting automatic retries, crash recovery, and download verification."
license = "MIT"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.3"
serde_json = "1.0"
anyhow = "1.0.100"
sha2 = "0.10.9"
hex = "0.4.3"
governor = "0.6"
nonzero_ext = "0.3"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.5"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0"
